--- a/publish.html
+++ b/publish.html
@@ -9,7 +9,7 @@
     
     <header>
         <h1>thePost</h1>
-        <p>veillez poster en toute respect</p>
+        <p>veillez poster en toute respect...</p>
     </header>
     <div class="link">
         <div><a href="home.html">Publish</a></div>
